--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Build coverage file
       run: |
-        pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
+        python3 -m pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
 
     - name: Pytest coverage comment
       uses: MishaKav/pytest-coverage-comment@main
@@ -59,7 +59,7 @@ jobs:
 
     - name: run pytest
       run: |
-        pytest --verbose --junitxml=testresults.xml
+        python3 -m pytest --verbose --junitxml=testresults.xml
 
     - name: upload test results
       if: always()
