--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,21 @@ version: '3.8'
 services:
   api:
     build: .
+    command: 'bash -c "cd /usr/src/db && alembic upgrade head && cd /usr/src/app && gunicorn -b 0.0.0.0:5000 main:flask_app"'
+    volumes:
+      - ./app/:/usr/src/app/
     ports:
       - 5000:5000
+    env_file:
+      - ./.env
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
     environment:
-      - FLASK_DEBUG=1
+      - POSTGRES_USER=sept_tech_challenge
+      - POSTGRES_PASSWORD=sept_tech_challenge
+      - POSTGRES_DB=sept_tech_challenge
+
+volumes:
+  postgres_data:
